<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="120dp"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/about"
                app:startIconDrawable="@drawable/ic_baseline_store_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/companyName"
                    android:inputType="text"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="50dp"
                app:expandedHintEnabled="false"
                app:startIconDrawable="@drawable/ic_baseline_code_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/companyCode"
                    android:inputType="text"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="190dp"
                app:expandedHintEnabled="false"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceNow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/currentPrice"
                    android:inputType="text"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="260dp"
                app:expandedHintEnabled="false"
                app:startIconDrawable="@drawable/ic_outline_shuffle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceChange"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/change"
                    android:inputType="text"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="350dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/switchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="100dp"
                    android:text="@string/switchText"></TextView>

                <Switch
                    android:id="@+id/customizedNameSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCheckNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="queryData"
        android:src="@drawable/ic_baseline_add_24"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonConfirmNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="onClickConfirmNew"
        android:src="@drawable/ic_baseline_check_24_white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonBackToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="onButtonReturn"
        android:src="@drawable/ic_baseline_arrow_back_24_white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:tint="@null" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>